// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className={undefined}
>
  Button
</div>
`;

exports[`renders correctly 2`] = `
<div
  className={undefined}
>
  subscribe
</div>
`;
